--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -9443,7 +9443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -9451,7 +9451,7 @@
    "source": [
     "def parse_NYT(filename):\n",
     "    data = []\n",
-    "    year = int(filename[:4])\n",
+    "    year = filename[:4]\n",
     "    decade = int(filename[:3] + '0')\n",
     "    \n",
     "    with open('Data/New York Times/' + filename, 'r') as f:\n",
@@ -9474,8 +9474,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NYT_data = []\n",
@@ -9493,7 +9495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9509,7 +9511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -10497,7 +10499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11437,8 +11439,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "coha_full['Corpus'] = 'COHA'\n",
@@ -11447,8 +11451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "coha_NYT_data = pd.concat([coha_full, NYT_data])"
@@ -11463,7 +11469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -11492,7 +11498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -11500,165 +11506,13 @@
      "output_type": "stream",
      "text": [
       "Year Coverage Statistics:\n",
-      "    Max: 3247\n",
+      "    Max: 3561\n",
       "    Min: 1\n",
-      "    Mean: 993.289772727\n",
-      "    Std: 989.948751793\n",
-      "    Median: 320.0\n",
+      "    Mean: 1748.19\n",
+      "    Std: 1043.52365666\n",
+      "    Median: 1971.5\n",
       "\n",
       "Complete Year Distribution:\n",
-      "1851    1465\n",
-      "1852    1217\n",
-      "1853    1318\n",
-      "1854    1181\n",
-      "1855    1255\n",
-      "1856    1235\n",
-      "1857    1548\n",
-      "1858    1520\n",
-      "1859    1221\n",
-      "1860     924\n",
-      "1861     995\n",
-      "1862    1177\n",
-      "1863    1649\n",
-      "1864    1443\n",
-      "1865    1884\n",
-      "1866    2112\n",
-      "1867    1899\n",
-      "1868    2034\n",
-      "1869    2088\n",
-      "1870    1970\n",
-      "1871    1686\n",
-      "1872    1937\n",
-      "1873    1953\n",
-      "1874    1941\n",
-      "1875    1808\n",
-      "1876    2237\n",
-      "1877    1673\n",
-      "1878    1963\n",
-      "1879    1660\n",
-      "1880     805\n",
-      "1881    1708\n",
-      "1882    2089\n",
-      "1883    1083\n",
-      "1884    1757\n",
-      "1885    2321\n",
-      "1886    2375\n",
-      "1887    2440\n",
-      "1888    2390\n",
-      "1889    2392\n",
-      "1890     838\n",
-      "1891    1827\n",
-      "1892    1677\n",
-      "1893    2475\n",
-      "1894    2638\n",
-      "1895    1737\n",
-      "1896    1904\n",
-      "1897    1682\n",
-      "1898    1491\n",
-      "1899    1249\n",
-      "1900    1199\n",
-      "1901    1331\n",
-      "1902    1341\n",
-      "1903    1482\n",
-      "1904    1793\n",
-      "1905    1763\n",
-      "1906    1558\n",
-      "1907    1713\n",
-      "1908    1621\n",
-      "1909    2216\n",
-      "1910    1974\n",
-      "1911    2218\n",
-      "1912    2173\n",
-      "1913    2367\n",
-      "1914    2618\n",
-      "1915    2202\n",
-      "1916    2805\n",
-      "1917    2469\n",
-      "1918    2401\n",
-      "1919    2448\n",
-      "1920    2714\n",
-      "1921    2537\n",
-      "1922    2568\n",
-      "1923    2897\n",
-      "1924    2884\n",
-      "1925    2994\n",
-      "1926    2935\n",
-      "1927    2604\n",
-      "1928    2429\n",
-      "1929    2357\n",
-      "1930    2341\n",
-      "1931    2291\n",
-      "1932    2723\n",
-      "1933    2538\n",
-      "1934    2748\n",
-      "1935    2843\n",
-      "1936    2850\n",
-      "1937    3247\n",
-      "1938    3135\n",
-      "1939    2424\n",
-      "1940    2241\n",
-      "1941    2732\n",
-      "1942    2784\n",
-      "1943    2840\n",
-      "1944    2791\n",
-      "1945    2886\n",
-      "1946    2805\n",
-      "1947    3073\n",
-      "1948    2627\n",
-      "1949    2631\n",
-      "1950    2524\n",
-      "1951    2357\n",
-      "1952    2775\n",
-      "1953    2592\n",
-      "1954    2704\n",
-      "1955    2700\n",
-      "1956    2647\n",
-      "1957     926\n",
-      "1958    2360\n",
-      "1959    2439\n",
-      "1960    2430\n",
-      "1961    2410\n",
-      "1962    2276\n",
-      "1963    2743\n",
-      "1964    1972\n",
-      "1965    1937\n",
-      "1966    1527\n",
-      "1967    1544\n",
-      "1968    1531\n",
-      "1969    1511\n",
-      "1970    1608\n",
-      "1971    1618\n",
-      "1972    1740\n",
-      "1973    1750\n",
-      "1974    1724\n",
-      "1975    1732\n",
-      "1976    1687\n",
-      "1977    1577\n",
-      "1978    1779\n",
-      "1979    1743\n",
-      "1980    1777\n",
-      "1981    1921\n",
-      "1982    1845\n",
-      "1983    2210\n",
-      "1984    1875\n",
-      "1985    1849\n",
-      "1986    1872\n",
-      "1987    1985\n",
-      "1988    1995\n",
-      "1989    1968\n",
-      "1990    1975\n",
-      "1991    1941\n",
-      "1992    1155\n",
-      "1993    1852\n",
-      "1994    1915\n",
-      "1995    1883\n",
-      "1996    1927\n",
-      "1997    1996\n",
-      "1998    1982\n",
-      "1999    1987\n",
-      "2000    1987\n",
-      "2001    1992\n",
-      "2002    1854\n",
       "1810       2\n",
       "1811       4\n",
       "1812       6\n",
@@ -11700,158 +11554,158 @@
       "1848      52\n",
       "1849      65\n",
       "1850      40\n",
-      "1851      41\n",
-      "1852      44\n",
-      "1853      55\n",
-      "1854      43\n",
-      "1855      61\n",
-      "1856      45\n",
-      "1857      35\n",
-      "1858      18\n",
-      "1859      48\n",
-      "1860      30\n",
-      "1861      45\n",
-      "1862      56\n",
-      "1863      54\n",
-      "1864      90\n",
-      "1865      49\n",
-      "1866      47\n",
-      "1867      41\n",
-      "1868      76\n",
-      "1869      68\n",
-      "1870      39\n",
-      "1871      75\n",
-      "1872      59\n",
-      "1873      76\n",
-      "1874      89\n",
-      "1875      94\n",
-      "1876      75\n",
-      "1877      55\n",
-      "1878      70\n",
-      "1879     123\n",
-      "1880     101\n",
-      "1881      86\n",
-      "1882     102\n",
-      "1883     117\n",
-      "1884      98\n",
-      "1885     103\n",
-      "1886     101\n",
-      "1887     109\n",
-      "1888      75\n",
-      "1889      84\n",
-      "1890      72\n",
-      "1891     103\n",
-      "1892      93\n",
-      "1893     103\n",
-      "1894     105\n",
-      "1895      96\n",
-      "1896     151\n",
-      "1897     123\n",
-      "1898     116\n",
-      "1899     113\n",
-      "1900     115\n",
-      "1901      69\n",
-      "1902     116\n",
-      "1903      88\n",
-      "1904      95\n",
-      "1905     114\n",
-      "1906     130\n",
-      "1907     133\n",
-      "1908     126\n",
-      "1909     155\n",
-      "1910     133\n",
-      "1911     153\n",
-      "1912     114\n",
-      "1913     123\n",
-      "1914     130\n",
-      "1915     147\n",
-      "1916     136\n",
-      "1917     146\n",
-      "1918     101\n",
-      "1919     130\n",
-      "1920     217\n",
-      "1921     218\n",
-      "1922     202\n",
-      "1923     260\n",
-      "1924     217\n",
-      "1925     284\n",
-      "1926     179\n",
-      "1927     241\n",
-      "1928     558\n",
-      "1929     312\n",
-      "1930     195\n",
-      "1931     269\n",
-      "1932     291\n",
-      "1933     252\n",
-      "1934     236\n",
-      "1935     225\n",
-      "1936     263\n",
-      "1937     314\n",
-      "1938     351\n",
-      "1939     326\n",
-      "1940     283\n",
-      "1941     320\n",
-      "1942     270\n",
-      "1943     232\n",
-      "1944     237\n",
-      "1945     251\n",
-      "1946     296\n",
-      "1947     280\n",
-      "1948     266\n",
-      "1949     279\n",
-      "1950     319\n",
-      "1951     332\n",
-      "1952     310\n",
-      "1953     279\n",
-      "1954     284\n",
-      "1955     269\n",
-      "1956     378\n",
-      "1957     313\n",
-      "1958     284\n",
-      "1959     279\n",
-      "1960     240\n",
-      "1961     253\n",
-      "1962     257\n",
-      "1963     264\n",
-      "1964     241\n",
-      "1965     290\n",
-      "1966     315\n",
-      "1967     246\n",
-      "1968     225\n",
-      "1969     253\n",
-      "1970     283\n",
-      "1971     293\n",
-      "1972     254\n",
-      "1973     249\n",
-      "1974     235\n",
-      "1975     234\n",
-      "1976     233\n",
-      "1977     218\n",
-      "1978     224\n",
-      "1979     234\n",
-      "1980     285\n",
-      "1981     320\n",
-      "1982     265\n",
-      "1983     280\n",
-      "1984     278\n",
-      "1985     292\n",
-      "1986     238\n",
-      "1987     299\n",
-      "1988     296\n",
-      "1989     273\n",
-      "1990     229\n",
-      "1991     217\n",
-      "1992     331\n",
-      "1993     351\n",
-      "1994     356\n",
-      "1995     528\n",
-      "1996     528\n",
-      "1997     556\n",
-      "1998     560\n",
-      "1999     716\n",
-      "2000     658\n",
-      "2001     823\n",
-      "2002     801\n",
+      "1851    1506\n",
+      "1852    1261\n",
+      "1853    1373\n",
+      "1854    1224\n",
+      "1855    1316\n",
+      "1856    1280\n",
+      "1857    1583\n",
+      "1858    1538\n",
+      "1859    1269\n",
+      "1860     954\n",
+      "1861    1040\n",
+      "1862    1233\n",
+      "1863    1703\n",
+      "1864    1533\n",
+      "1865    1933\n",
+      "1866    2159\n",
+      "1867    1940\n",
+      "1868    2110\n",
+      "1869    2156\n",
+      "1870    2009\n",
+      "1871    1761\n",
+      "1872    1996\n",
+      "1873    2029\n",
+      "1874    2030\n",
+      "1875    1902\n",
+      "1876    2312\n",
+      "1877    1728\n",
+      "1878    2033\n",
+      "1879    1783\n",
+      "1880     906\n",
+      "1881    1794\n",
+      "1882    2191\n",
+      "1883    1200\n",
+      "1884    1855\n",
+      "1885    2424\n",
+      "1886    2476\n",
+      "1887    2549\n",
+      "1888    2465\n",
+      "1889    2476\n",
+      "1890     910\n",
+      "1891    1930\n",
+      "1892    1770\n",
+      "1893    2578\n",
+      "1894    2743\n",
+      "1895    1833\n",
+      "1896    2055\n",
+      "1897    1805\n",
+      "1898    1607\n",
+      "1899    1362\n",
+      "1900    1314\n",
+      "1901    1400\n",
+      "1902    1457\n",
+      "1903    1570\n",
+      "1904    1888\n",
+      "1905    1877\n",
+      "1906    1688\n",
+      "1907    1846\n",
+      "1908    1747\n",
+      "1909    2371\n",
+      "1910    2107\n",
+      "1911    2371\n",
+      "1912    2287\n",
+      "1913    2490\n",
+      "1914    2748\n",
+      "1915    2349\n",
+      "1916    2941\n",
+      "1917    2615\n",
+      "1918    2502\n",
+      "1919    2578\n",
+      "1920    2931\n",
+      "1921    2755\n",
+      "1922    2770\n",
+      "1923    3157\n",
+      "1924    3101\n",
+      "1925    3278\n",
+      "1926    3114\n",
+      "1927    2845\n",
+      "1928    2987\n",
+      "1929    2669\n",
+      "1930    2536\n",
+      "1931    2560\n",
+      "1932    3014\n",
+      "1933    2790\n",
+      "1934    2984\n",
+      "1935    3068\n",
+      "1936    3113\n",
+      "1937    3561\n",
+      "1938    3486\n",
+      "1939    2750\n",
+      "1940    2524\n",
+      "1941    3052\n",
+      "1942    3054\n",
+      "1943    3072\n",
+      "1944    3028\n",
+      "1945    3137\n",
+      "1946    3101\n",
+      "1947    3353\n",
+      "1948    2893\n",
+      "1949    2910\n",
+      "1950    2843\n",
+      "1951    2689\n",
+      "1952    3085\n",
+      "1953    2871\n",
+      "1954    2988\n",
+      "1955    2969\n",
+      "1956    3025\n",
+      "1957    1239\n",
+      "1958    2644\n",
+      "1959    2718\n",
+      "1960    2670\n",
+      "1961    2663\n",
+      "1962    2533\n",
+      "1963    3007\n",
+      "1964    2213\n",
+      "1965    2227\n",
+      "1966    1842\n",
+      "1967    1790\n",
+      "1968    1756\n",
+      "1969    1764\n",
+      "1970    1891\n",
+      "1971    1911\n",
+      "1972    1994\n",
+      "1973    1999\n",
+      "1974    1959\n",
+      "1975    1966\n",
+      "1976    1920\n",
+      "1977    1795\n",
+      "1978    2003\n",
+      "1979    1977\n",
+      "1980    2062\n",
+      "1981    2241\n",
+      "1982    2110\n",
+      "1983    2490\n",
+      "1984    2153\n",
+      "1985    2141\n",
+      "1986    2110\n",
+      "1987    2284\n",
+      "1988    2291\n",
+      "1989    2241\n",
+      "1990    2204\n",
+      "1991    2158\n",
+      "1992    1486\n",
+      "1993    2203\n",
+      "1994    2271\n",
+      "1995    2411\n",
+      "1996    2455\n",
+      "1997    2552\n",
+      "1998    2542\n",
+      "1999    2703\n",
+      "2000    2645\n",
+      "2001    2815\n",
+      "2002    2655\n",
       "2003    1054\n",
       "2004    1278\n",
       "2005     977\n",
@@ -16293,6 +16147,15 @@
     "SVM_pred = SVM_clf.predict(X_test)\n",
     "eval_learner(coha_NYT_test['Decade'], SVM_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
