Fix COHA-NYT pickle filename

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -13572,14 +13572,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pickle.dump(X_train, open(\"coha_BoW_train.pkl\", \"wb\"))\n",
-    "pickle.dump(X_test, open(\"coha_BoW_test.pkl\", \"wb\"))"
+    "pickle.dump(X_train, open(\"coha_NYT_BoW_train.pkl\", \"wb\"))\n",
+    "pickle.dump(X_test, open(\"coha_NYT_BoW_test.pkl\", \"wb\"))"
    ]
   },
   {
@@ -13590,8 +13590,8 @@
    },
    "outputs": [],
    "source": [
-    "X_train = pickle.load(open(\"coha_BoW_train.pkl\", \"rb\"))\n",
-    "X_test = pickle.load(open(\"coha_BoW_test.pkl\", \"rb\"))"
+    "X_train = pickle.load(open(\"coha_NYT_BoW_train.pkl\", \"rb\"))\n",
+    "X_test = pickle.load(open(\"coha_NYT_BoW_test.pkl\", \"rb\"))"
    ]
   },
   {
