Add RNN implementation results

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -13572,7 +13572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -15337,13 +15337,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('coha_test.txt', 'a') as f:\n",
+    "with open('coha_test.data', 'a') as f:\n",
     "    for i in range(0, len(coha_test)):\n",
     "        f.write(str(coha_test.iloc[i]['Year']) + '\\t' + coha_test.iloc[i]['Text'] + '\\n')\n",
     "        \n",
-    "with open('nyt_test.txt', 'a') as f:\n",
+    "with open('nyt_test.data', 'a') as f:\n",
     "    for i in range(0, len(NYT_test)):\n",
     "        f.write(str(NYT_test.iloc[i]['Year']) + '\\t' + NYT_test.iloc[i]['Text'] + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results from Previous Paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dataset, method, mean_abs_error, median_abs_error, mean_accuracy, pw_score, mean_abs_error_dec,median_abs_error_dec, mean_accuracy_dec\n",
+    "\n",
+    "score ('NYTimes', '0.03-v1-rep-1', 25.11502255344185, 18.0, 0.01789566581682683, 0.16109821924484702, 25.177240635418709, 20.0, 0.15941851343400668)\n",
+    "\n",
+    "score ('COHA_100', '0.03-v1-rep-1', 25.861715933669792, 15.0, 0.025955299206921412, 0.20184679649518691, 25.945205479452056, 20.0, 0.19855803893294882)\n",
+    "\n",
+    "score ('COHA_500', '0.03-v1-rep-1', 21.984859408795963, 13.0, 0.031002162941600575, 0.23847609808407552, 22.298485940879598, 10.0, 0.23114635904830569)\n",
+    "\n",
+    "score ('COHA_1000', '0.03-v1-rep-1', 21.376928622927181, 13.0, 0.032299927901946648, 0.24076844977761547, 21.770728190338861, 10.0, 0.23028118240807499)\n",
+    "\n",
+    "score ('COHA_2000', '0.03-v1-rep-1', 20.978658976207644, 13.0, 0.034174477289113193, 0.24111475875694943, 21.352559480894016, 10.0, 0.22826243691420331)"
    ]
   },
   {
