Clean up documentation

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -9424,7 +9424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to incorporate the NYT dataset which was aquired through the public API.  The data consists of snippets and leading paragraphs from news articles from 1850's-2000's.  Given that this data does not include any instance from pre-1850 we will also need to incorporate some of the Gutenberg data to offset this."
+    "We need to incorporate the NYT dataset which was aquired through the public API.  The data consists of snippets and leading paragraphs from news articles from 1850's-2000's."
    ]
   },
   {
