Add accuracy scores for apples to apples comparison

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -13520,7 +13520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -13539,7 +13539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -13584,7 +13584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14471,7 +14471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -15299,6 +15299,11 @@
     }
    ],
    "source": [
+    "SVM_clf = LinearSVC(C=0.5, class_weight=None, dual=True, fit_intercept=True,\n",
+    "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+    "     multi_class='ovr', penalty='l2', random_state=0, tol=0.0001,\n",
+    "     verbose=0)\n",
+    "SVM_clf.fit(X_train, coha_NYT_train['Decade'])\n",
     "SVM_pred = SVM_clf.predict(X_test)\n",
     "eval_learner(coha_NYT_test['Decade'], SVM_pred)"
    ]
@@ -15321,7 +15326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -15334,7 +15339,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('coha_test.data', 'a') as f:\n",
@@ -15357,7 +15364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dataset, method, mean_abs_error, median_abs_error, mean_accuracy, pw_score, mean_abs_error_dec,median_abs_error_dec, mean_accuracy_dec\n",
+    "dataset, method, mean_abs_error, median_abs_error, mean_accuracy, pw_score, mean_abs_error_dec, median_abs_error_dec, mean_accuracy_dec\n",
     "\n",
     "score('NYTimes', '0.03-v1-rep-1', 25.11502255344185, 18.0, 0.01789566581682683, 0.16109821924484702, 25.177240635418709, 20.0, 0.15941851343400668)\n",
     "\n",
@@ -16203,21 +16210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.9183673469\n"
+      "MAE: 11.9183673469\n",
+      "Accuracy: 0.540408163265\n"
      ]
     }
    ],
    "source": [
     "NYT_test_features = transformer.transform(vectorizer.transform(NYT_test['Text']))\n",
     "SVM_pred = SVM_clf.predict(NYT_test_features)\n",
-    "print mean_absolute_error(NYT_test['Decade'], SVM_pred)"
+    "print 'MAE: ' + str(mean_absolute_error(NYT_test['Decade'], SVM_pred))\n",
+    "print 'Accuracy: ' + str(accuracy_score(NYT_test['Decade'], SVM_pred))"
    ]
   },
   {
@@ -16229,7 +16238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -16242,8 +16251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "coha_100 = [get_First_K_Words(text, 100) for text in coha_test['Text'].values.tolist()]"
@@ -16251,26 +16262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.1788179194\n"
+      "MAE: 25.1788179194\n",
+      "Accuracy: 0.334922825951\n"
      ]
     }
    ],
    "source": [
     "coha_100_test_features = transformer.transform(vectorizer.transform(coha_100))\n",
     "SVM_pred = SVM_clf.predict(coha_100_test_features)\n",
-    "print mean_absolute_error(coha_test['Decade'], SVM_pred)"
+    "print 'MAE: ' + str(mean_absolute_error(coha_test['Decade'], SVM_pred))\n",
+    "print 'Accuracy: ' + str(accuracy_score(coha_test['Decade'], SVM_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -16281,26 +16294,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.1899861965\n"
+      "MAE: 14.1899861965\n",
+      "Accuracy: 0.525787426277\n"
      ]
     }
    ],
    "source": [
     "coha_500_test_features = transformer.transform(vectorizer.transform(coha_500))\n",
     "SVM_pred = SVM_clf.predict(coha_500_test_features)\n",
-    "print mean_absolute_error(coha_test['Decade'], SVM_pred)"
+    "print 'MAE: ' + str(mean_absolute_error(coha_test['Decade'], SVM_pred))\n",
+    "print 'Accuracy: ' + str(accuracy_score(coha_test['Decade'], SVM_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -16311,26 +16326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.8647258125\n"
+      "MAE: 11.8647258125\n",
+      "Accuracy: 0.575229012423\n"
      ]
     }
    ],
    "source": [
     "coha_1000_test_features = transformer.transform(vectorizer.transform(coha_1000))\n",
     "SVM_pred = SVM_clf.predict(coha_1000_test_features)\n",
-    "print mean_absolute_error(coha_test['Decade'], SVM_pred)"
+    "print 'MAE: ' + str(mean_absolute_error(coha_test['Decade'], SVM_pred))\n",
+    "print 'Accuracy: ' + str(accuracy_score(coha_test['Decade'], SVM_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -16341,21 +16358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.4969255866\n"
+      "MAE: 10.4969255866\n",
+      "Accuracy: 0.609988706237\n"
      ]
     }
    ],
    "source": [
     "coha_2000_test_features = transformer.transform(vectorizer.transform(coha_2000))\n",
     "SVM_pred = SVM_clf.predict(coha_2000_test_features)\n",
-    "print mean_absolute_error(coha_test['Decade'], SVM_pred)"
+    "print 'MAE: ' + str(mean_absolute_error(coha_test['Decade'], SVM_pred))\n",
+    "print 'Accuracy: ' + str(accuracy_score(coha_test['Decade'], SVM_pred))"
    ]
   },
   {
@@ -17159,12 +17178,12 @@
     "ax.xaxis.set_visible(False)\n",
     "ax.yaxis.set_visible(False)\n",
     "colLabels = ('Dataset', 'Mean Absolute Error')\n",
-    "RNNResults = (['New York Times', 11.9183673469],\n",
+    "Results = (['New York Times', 11.9183673469],\n",
     "              ['COHA_100', 25.1788179194],\n",
     "              ['COHA_500', 14.1899861965],\n",
     "              ['COHA_1000', 11.8647258125],\n",
     "              ['COHA_2000', 10.4969255866])\n",
-    "table = ax.table(cellText=RNNResults, colLabels=colLabels, loc='center')\n",
+    "table = ax.table(cellText=Results, colLabels=colLabels, loc='center')\n",
     "plt.show()"
    ]
   },
